# mine-mod

./: CMakeLists.txt  README.md  SOURCE_SHA256SUMS  SOURCE_SHA256SUMS.txt
.github/workflows/: main.yml
docs/: GUI_IMPROVEMENTS.md  KG_STATIC_ANALYSIS.md  gui-dynamic-version-fix.md
scripts/: create_marker.ps1  install_from_build.ps1  set_patches_enabled.ps1  uninstall_manual.ps1
src/module/: ctf_patch_module.cpp  user_patches.h
src/proxy/: proxy.cpp  vcruntime140_1.def
tools/CTFInstallerGui/: CTFInstallerGui.csproj  MainForm.cs  Program.cs  README.md  app.manifest
